# cpp-basics

./: CMakeLists.txt  QUESTIONS.md  README.md
10_operator_overloading/1_copy_and_move_assignment/: MyString.cpp  MyString.h  main.cpp
10_operator_overloading/2_overloading_operators_as_member_functions/: Number.cpp  Number.h  main.cpp
10_operator_overloading/3_overloading_operators_as_global_functions/: Number.cpp  Number.h  main.cpp
10_operator_overloading/4_overloading_the_stream_insertion_and_extraction_operator/: Person.cpp  Person.h  main.cpp
11_inheritance/1_deriving_classes/: Account.cpp  Account.h  AdminAccount.cpp  AdminAccount.h  main.cpp
11_inheritance/2_access_modifiers/: main.cpp
11_inheritance/3_constructors_and_destructors/: main.cpp
11_inheritance/4_passing_args_to_base_constructor/: main.cpp
11_inheritance/5_copy_and_move/: main.cpp
11_inheritance/6_redefining_base_class_methods/: main.cpp
12_polymorphism/1_static_binding/: main.cpp
12_polymorphism/2_dynamic_binding/: main.cpp
12_polymorphism/3_final_specifier/: main.cpp
12_polymorphism/4_abstract_classes/: main.cpp
12_polymorphism/5_abstract_classes_as_interfaces/: main.cpp
13_smart_pointers/: main.cpp
14_exception_handling/: main.cpp
15_io_streams/1_stream_manipulators/: main.cpp
15_io_streams/2_reading_from_a_text_file/: file.txt  main.cpp
15_io_streams/3_writing_to_a_text_file/: file.txt  main.cpp
15_io_streams/4_string_streams/: main.cpp
16_stl/10_set/: main.cpp
16_stl/11_map/: main.cpp
16_stl/12_stack/: main.cpp
16_stl/13_queue/: main.cpp
16_stl/14_priority_queue/: main.cpp
16_stl/1_macros/: main.cpp
16_stl/2_function_templates/: main.cpp
16_stl/3_class_templates/: main.cpp
16_stl/4_iterators/: main.cpp
16_stl/5_algorithms/: main.cpp
16_stl/6_array/: main.cpp
16_stl/7_vector/: main.cpp
16_stl/8_deque/: main.cpp
16_stl/9_list_and_forward_list/: main.cpp
17_lambdas/1_function_objects/: main.cpp
17_lambdas/2_stateless_lambda_expressions/: main.cpp
17_lambdas/3_stateful_lambda_expressions/: main.cpp
18_enumerations/1_unscoped_enums/: main.cpp
18_enumerations/2_scoped_enums/: main.cpp
1_basic_io/: main.cpp
2_variables_and_constants/: main.cpp
3_arrays_and_vectors/: main.cpp
4_operators/: main.cpp
5_program_flow/: main.cpp
6_strings/: main.cpp
7_functions/: main.cpp
8_pointers_and_references/: main.cpp
9_classes_and_objects/: main.cpp
9_classes_and_objects/10_friend_of_a_class/: main.cpp
9_classes_and_objects/1_class_basics/: main.cpp
9_classes_and_objects/2_using_header_files/: UserAccount.cpp  UserAccount.h  main.cpp
9_classes_and_objects/3_constructors_and_destructors/: Player.cpp  Player.h  main.cpp
9_classes_and_objects/4_constructor_initialization_lists/: Player.cpp  Player.h  main.cpp
9_classes_and_objects/5_default_constructor_parameters/: Player.cpp  Player.h  main.cpp
9_classes_and_objects/6_copy_constructor/: Player.cpp  Player.h  main.cpp
9_classes_and_objects/7_shallow_and_deep_copy/: SHALLOW_VS_DEEP.md
9_classes_and_objects/8_move_constructor/: EXPLANATION.md  Move.cpp  Move.h  main.cpp
9_classes_and_objects/9_static_members/: Player.cpp  Player.h  main.cpp
