cmake_minimum_required(VERSION 3.22)
project(cpp_basics)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_basic_io 1_basic_io/main.cpp)
add_executable(2_variables_and_constants 2_variables_and_constants/main.cpp)
add_executable(3_arrays_and_vectors 3_arrays_and_vectors/main.cpp)
add_executable(4_operators 4_operators/main.cpp)
add_executable(6_strings 6_strings/main.cpp)
