cmake_minimum_required(VERSION 3.22)
project(cpp_basics)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 1_basic_io/main.cpp)
add_executable(2 2_variables_and_constants/main.cpp)
add_executable(3 3_arrays_and_vectors/main.cpp)
add_executable(4 4_operators/main.cpp)
add_executable(5 5_program_flow/main.cpp)
add_executable(6 6_strings/main.cpp)
add_executable(7 7_functions/main.cpp)
add_executable(8 8_pointers_and_references/main.cpp)
add_executable(9.1 9_classes_and_objects/1_class_basics/main.cpp)
add_executable(9.2 9_classes_and_objects/2_using_header_files/main.cpp 9_classes_and_objects/2_using_header_files/UserAccount.cpp 9_classes_and_objects/2_using_header_files/UserAccount.h)
add_executable(9.3 9_classes_and_objects/3_constructors_and_destructors/main.cpp 9_classes_and_objects/3_constructors_and_destructors/Player.cpp 9_classes_and_objects/3_constructors_and_destructors/Player.h)
add_executable(9.4 9_classes_and_objects/4_constructor_initialization_lists/main.cpp 9_classes_and_objects/4_constructor_initialization_lists/Player.cpp 9_classes_and_objects/4_constructor_initialization_lists/Player.h)
add_executable(9.5 9_classes_and_objects/5_default_constructor_parameters/main.cpp 9_classes_and_objects/5_default_constructor_parameters/Player.cpp 9_classes_and_objects/5_default_constructor_parameters/Player.h)
add_executable(9.6 9_classes_and_objects/6_copy_constructor/main.cpp 9_classes_and_objects/6_copy_constructor/Player.cpp 9_classes_and_objects/6_copy_constructor/Player.h)
add_executable(9.8 9_classes_and_objects/8_move_constructor/main.cpp 9_classes_and_objects/8_move_constructor/Move.cpp 9_classes_and_objects/8_move_constructor/Move.h)
add_executable(9.9 9_classes_and_objects/9_static_members/main.cpp 9_classes_and_objects/9_static_members/Player.cpp 9_classes_and_objects/9_static_members/Player.h)
add_executable(9.10 9_classes_and_objects/10_friend_of_a_class/main.cpp)
add_executable(10.1 10_operator_overloading/1_copy_and_move_assignment/main.cpp 10_operator_overloading/1_copy_and_move_assignment/MyString.cpp 10_operator_overloading/1_copy_and_move_assignment/MyString.h)
add_executable(10.2 10_operator_overloading/2_overloading_operators_as_member_functions/main.cpp 10_operator_overloading/2_overloading_operators_as_member_functions/Number.cpp 10_operator_overloading/2_overloading_operators_as_member_functions/Number.h)
add_executable(10.3 10_operator_overloading/3_overloading_operators_as_global_functions/main.cpp 10_operator_overloading/3_overloading_operators_as_global_functions/Number.cpp 10_operator_overloading/3_overloading_operators_as_global_functions/Number.h)
add_executable(10.4 10_operator_overloading/4_overloading_the_stream_insertion_and_extraction_operator/main.cpp 10_operator_overloading/4_overloading_the_stream_insertion_and_extraction_operator/Person.cpp 10_operator_overloading/4_overloading_the_stream_insertion_and_extraction_operator/Person.h)