cmake_minimum_required(VERSION 3.22)
project(cpp_basics)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 1_basic_io/main.cpp)
add_executable(2 2_variables_and_constants/main.cpp)
add_executable(3 3_arrays_and_vectors/main.cpp)
add_executable(4 4_operators/main.cpp)
add_executable(5 5_program_flow/main.cpp)
add_executable(6 6_strings/main.cpp)
add_executable(7 7_functions/main.cpp)
add_executable(8 8_pointers_and_references/main.cpp)
add_executable(9.1 9_classes_and_objects/1_class_basics/main.cpp)
add_executable(9.2 9_classes_and_objects/2_using_header_files/main.cpp 9_classes_and_objects/2_using_header_files/UserAccount.cpp 9_classes_and_objects/2_using_header_files/UserAccount.h)
add_executable(9.3 9_classes_and_objects/3_constructors_and_destructors/main.cpp 9_classes_and_objects/3_constructors_and_destructors/Player.cpp 9_classes_and_objects/3_constructors_and_destructors/Player.h)
add_executable(9.4 9_classes_and_objects/4_constructor_initialization_lists/main.cpp 9_classes_and_objects/4_constructor_initialization_lists/Player.cpp 9_classes_and_objects/4_constructor_initialization_lists/Player.h)
add_executable(9.5 9_classes_and_objects/5_default_constructor_parameters/main.cpp 9_classes_and_objects/5_default_constructor_parameters/Player.cpp 9_classes_and_objects/5_default_constructor_parameters/Player.h)
add_executable(9.6 9_classes_and_objects/6_copy_constructor/main.cpp 9_classes_and_objects/6_copy_constructor/Player.cpp 9_classes_and_objects/6_copy_constructor/Player.h)
add_executable(9.8 9_classes_and_objects/8_move_constructor/main.cpp 9_classes_and_objects/8_move_constructor/Move.cpp 9_classes_and_objects/8_move_constructor/Move.h)
add_executable(9.9 9_classes_and_objects/9_static_members/main.cpp 9_classes_and_objects/9_static_members/Player.cpp 9_classes_and_objects/9_static_members/Player.h)
add_executable(9.10 9_classes_and_objects/10_friend_of_a_class/main.cpp)
add_executable(10.1 10_operator_overloading/1_copy_and_move_assignment/main.cpp 10_operator_overloading/1_copy_and_move_assignment/MyString.cpp 10_operator_overloading/1_copy_and_move_assignment/MyString.h)
add_executable(10.2 10_operator_overloading/2_overloading_operators_as_member_functions/main.cpp 10_operator_overloading/2_overloading_operators_as_member_functions/Number.cpp 10_operator_overloading/2_overloading_operators_as_member_functions/Number.h)
add_executable(10.3 10_operator_overloading/3_overloading_operators_as_global_functions/main.cpp 10_operator_overloading/3_overloading_operators_as_global_functions/Number.cpp 10_operator_overloading/3_overloading_operators_as_global_functions/Number.h)
add_executable(10.4 10_operator_overloading/4_overloading_the_stream_insertion_and_extraction_operator/main.cpp 10_operator_overloading/4_overloading_the_stream_insertion_and_extraction_operator/Person.cpp 10_operator_overloading/4_overloading_the_stream_insertion_and_extraction_operator/Person.h)
add_executable(11.1 11_inheritance/1_deriving_classes/main.cpp 11_inheritance/1_deriving_classes/Account.cpp 11_inheritance/1_deriving_classes/Account.h 11_inheritance/1_deriving_classes/AdminAccount.cpp 11_inheritance/1_deriving_classes/AdminAccount.h)
add_executable(11.2 11_inheritance/2_access_modifiers/main.cpp)
add_executable(11.3 11_inheritance/3_constructors_and_destructors/main.cpp)
add_executable(11.4 11_inheritance/4_passing_args_to_base_constructor/main.cpp)
add_executable(11.5 11_inheritance/5_copy_and_move/main.cpp)
add_executable(11.6 11_inheritance/6_redefining_base_class_methods/main.cpp)
add_executable(12.1 12_polymorphism/1_static_binding/main.cpp)
add_executable(12.2 12_polymorphism/2_dynamic_binding/main.cpp)
add_executable(12.3 12_polymorphism/3_final_specifier/main.cpp)
add_executable(12.4 12_polymorphism/4_abstract_classes/main.cpp)
add_executable(12.5 12_polymorphism/5_abstract_classes_as_interfaces/main.cpp)
add_executable(13 13_smart_pointers/main.cpp)
add_executable(14 14_exception_handling/main.cpp)
add_executable(15.1 15_io_streams/1_stream_manipulators/main.cpp)
add_executable(15.2 15_io_streams/2_reading_from_a_text_file/main.cpp)
add_executable(15.3 15_io_streams/3_writing_to_a_text_file/main.cpp)
add_executable(15.4 15_io_streams/4_string_streams/main.cpp)
add_executable(16.1 16_stl/1_macros/main.cpp)
add_executable(16.2 16_stl/2_function_templates/main.cpp)
add_executable(16.3 16_stl/3_class_templates/main.cpp)
add_executable(16.4 16_stl/4_iterators/main.cpp)
add_executable(16.5 16_stl/5_algorithms/main.cpp)
add_executable(16.6 16_stl/6_array/main.cpp)
add_executable(16.7 16_stl/7_vector/main.cpp)
add_executable(16.8 16_stl/8_deque/main.cpp)
add_executable(16.9 16_stl/9_list_and_forward_list/main.cpp)
add_executable(16.10 16_stl/10_set/main.cpp)
add_executable(16.11 16_stl/11_map/main.cpp)
add_executable(16.12 16_stl/12_stack/main.cpp)
add_executable(16.13 16_stl/13_queue/main.cpp)
add_executable(16.14 16_stl/14_priority_queue/main.cpp)
add_executable(17.1 17_lambdas/1_function_objects/main.cpp)
add_executable(17.2 17_lambdas/2_stateless_lambda_expressions/main.cpp)
add_executable(17.3 17_lambdas/3_stateful_lambda_expressions/main.cpp)
add_executable(18.1 18_enumerations/1_unscoped_enums/main.cpp)
add_executable(18.2 18_enumerations/2_scoped_enums/main.cpp)